--- a/index.html
+++ b/index.html
@@ -18,13 +18,48 @@
   <main class="container">
     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro fuga et error eius quae. Magnam aut ad aliquam? Quae id sunt inventore quibusdam quidem asperiores.</p>
 
-  <div class="profili clearfix">
-    <div class="row">
+  <div class="profili">
+    <div class="row clearfix">
       <div class="col">
         <img src="img/male1.png" alt="male1">
         <h4>MARCO BIANCHI</h4>
-        <span class="professione">Designer</span>
+        <div class="professione">Designer</div>
         <span class="email"><a href="#">marcobianchi@team.com</a></span>
+      </div>
+
+      <div class="col">
+        <img src="img/female1.png" alt="female1">
+        <h4>LAURA ROSSI</h4>
+        <div class="professione">Front-end Developer</div>
+        <span class="email"><a href="#">laurarossi@team.com</a></span>
+      </div>
+
+      <div class="col">
+        <img src="img/male2.png" alt="male2">
+        <h4>GIORGIO VERDI</h4>
+        <div class="professione">Back.end developer</div>
+        <span class="email"><a href="#">giorgioverdi@team.com</a></span>
+      </div>
+
+      <div class="col">
+        <img src="img/female2.png" alt="female2">
+        <h4>MARTA IPSUM</h4>
+        <div class="professione">SEO Specialist</div>
+        <span class="email"><a href="#">martaipsum@team.com</a></span>
+      </div>
+
+      <div class="col">
+        <img src="img/male3.png" alt="male3">
+        <h4>ROBERTO LOREM</h4>
+        <div class="professione">Project Manager</div>
+        <span class="email"><a href="#">robertolorem@team.com</a></span>
+      </div>
+
+      <div class="col">
+        <img src="img/female3.png" alt="female3">
+        <h4>MARCO BIANCHI</h4>
+        <div class="professione">Analyst</div>
+        <span class="email"><a href="#">danielaamet@team.com</a></span>
       </div>
     </div>
   </div>
