--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
   <title>Floating Cards</title>
 </head>
 <body>
+
+  <!--TITOLO PAGINA-->
   <header>
     <h1>Meet Our Team</h1>
   </header>
 
-  <main class="container">
+  <!--INIZIO MAIN-->
+
+  <main class="container clearfix">
     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro fuga et error eius quae. Magnam aut ad aliquam? Quae id sunt inventore quibusdam quidem asperiores.</p>
 
+    <!--SEZIONE PROFILI-->
+  
   <div class="profili">
     <div class="row clearfix">
       <div class="col">
@@ -63,14 +69,6 @@
       </div>
     </div>
   </div>
-
-
   </main>
-
-
-
-
-
-
 </body>
 </html>
